[project]
name = "dft_embedding_solver"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Max Rossmannek", email="oss@zurich.ibm.com" },
]
description = "A Qiskit-based range-separation DFT Embedding Solver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit-nature~=0.6.0",
    "pyscf~=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dft_embedding_solver"]
